--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.1",
+    "@tanstack/react-query": "^5.77.2",
+    "@tanstack/react-query-devtools": "^5.79.0",
+    "axios": "^1.9.0",
     "formik": "^2.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.5.0",
+    "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.1.1",
     "yup": "^1.6.1"
